# haskell-intro

./: .gitignore  README.md  haskell-intro.cabal
.codex/skills/haskell-learning-coach/: SKILL.md
.codex/skills/haskell-learning-coach/agents/: openai.yaml
app/: Main.hs
app/lesson01-values/: Exercises.hs  Main.hs
app/lesson02-conditions/: Exercises.hs  Main.hs
app/lesson03-lists/: Exercises.hs  Main.hs
app/lesson04-pattern-matching/: Exercises.hs  Main.hs
app/lesson05-algebraic-data-types/: Exercises.hs  Main.hs
docs/: 01-setup.md  02-tools.md  03-files-and-running.md  04-learning-plan.md  05-lesson01-values.md  06-lesson02-conditions.md  07-lesson03-lists.md  08-lesson04-pattern-matching.md  09-lesson05-algebraic-data-types.md  README.md
