cabal-version:   3.14
name:            haskell-intro
version:         0.1.0.0
synopsis:        Small Haskell project for learning the basics
license:         NONE
author:          kyo1941
maintainer:      kyo1941@outlook.jp
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-intro
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable lesson01-values
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson01-values
    default-language: Haskell2010

executable lesson01-values-exercises
    import:           warnings
    main-is:          Exercises.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson01-values
    default-language: Haskell2010

executable lesson02-conditions
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson02-conditions
    default-language: Haskell2010

executable lesson02-conditions-exercises
    import:           warnings
    main-is:          Exercises.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson02-conditions
    default-language: Haskell2010

executable lesson03-lists
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson03-lists
    default-language: Haskell2010

executable lesson03-lists-exercises
    import:           warnings
    main-is:          Exercises.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson03-lists
    default-language: Haskell2010

executable lesson04-pattern-matching
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson04-pattern-matching
    default-language: Haskell2010

executable lesson04-pattern-matching-exercises
    import:           warnings
    main-is:          Exercises.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app/lesson04-pattern-matching
    default-language: Haskell2010
